// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > file > downloadFile > success 1`] = `
{
  "on": [MockFunction] {
    "calls": [
      [
        "data",
        [Function],
      ],
      [
        "close",
        [Function],
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "pipe": [MockFunction],
}
`;

exports[`services > file > finishUploadMultipartFile > success 1`] = `
{
  "_id": {
    "toString": [Function],
  },
  "aggregate": [MockFunction],
  "append": [MockFunction],
  "complete": true,
  "delete": [MockFunction],
  "deleteMany": [MockFunction],
  "deleteOne": [MockFunction],
  "find": [MockFunction],
  "findById": [MockFunction],
  "findByIdAndDelete": [MockFunction],
  "findOne": [MockFunction],
  "findOneAndDelete": [MockFunction],
  "findOneAndUpdate": [MockFunction],
  "group": [MockFunction],
  "id": "mock-id",
  "lookup": [MockFunction],
  "markModified": [MockFunction],
  "match": [MockFunction],
  "save": [MockFunction] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "scanResults": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "artefactKind": "file",
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "size": 100,
  "sort": [MockFunction],
  "tags": [],
  "toObject": [MockFunction],
  "update": [MockFunction],
  "updateMany": [MockFunction],
  "updateOne": [MockFunction],
}
`;

exports[`services > file > getFilesByIds > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "example": "file",
    "scanResults": [],
  },
]
`;

exports[`services > file > getFilesByIds > success with scans mapped 1`] = `
[
  {
    "_id": "123",
    "example": "file",
    "scanResults": [
      {
        "fileId": "123",
      },
      {
        "fileId": "123",
      },
    ],
  },
  {
    "_id": "321",
    "example": "file",
    "scanResults": [
      {
        "fileId": "321",
      },
    ],
  },
]
`;

exports[`services > file > getFilesByModel > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "example": "file",
  },
]
`;

exports[`services > file > removeFile > success 1`] = `
{
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > removeFiles > success 1`] = `
[
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
]
`;

exports[`services > file > removeFiles > success 2`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel",
  },
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel2",
  },
]
`;

exports[`services > file > removeFiles > success bypass mirrored model check 1`] = `
[
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
]
`;

exports[`services > file > removeFiles > success bypass mirrored model check 2`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel",
  },
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel2",
  },
]
`;

exports[`services > file > removeFiles > success hard delete 1`] = `
[
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
  [
    {
      "fileId": {
        "$eq": undefined,
      },
    },
    undefined,
  ],
]
`;

exports[`services > file > removeFiles > success hard delete 2`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel",
  },
  {
    "_id": {
      "toString": [MockFunction],
    },
    "id": undefined,
    "modelId": "testModel2",
  },
]
`;

exports[`services > file > startUploadMultipartFile > success 1`] = `
{
  "chunks": [
    {
      "endByte": 5242879,
      "startByte": 0,
    },
    {
      "endByte": 10485759,
      "startByte": 5242880,
    },
  ],
  "file": {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "complete": false,
    "delete": [MockFunction],
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "id": "mock-id",
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "mime": "text/plain",
    "modelId": "testModelId",
    "name": "testFile",
    "path": "beta/model/testModelId/files/mock-long-id",
    "save": [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "sort": [MockFunction],
    "tags": [],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
  "uploadId": "uploadId",
}
`;

exports[`services > file > updateFile > success 1`] = `
{
  "_id": {
    "toString": [MockFunction],
  },
  "id": undefined,
  "modelId": "testModel",
}
`;

exports[`services > file > updateFile > success multiple params 1`] = `
{
  "_id": {
    "toString": [MockFunction],
  },
  "id": undefined,
  "modelId": "testModel",
}
`;

exports[`services > file > uploadFile > success 1`] = `
{
  "_id": {
    "toString": [Function],
  },
  "aggregate": [MockFunction],
  "append": [MockFunction],
  "complete": true,
  "delete": [MockFunction],
  "deleteMany": [MockFunction],
  "deleteOne": [MockFunction],
  "find": [MockFunction],
  "findById": [MockFunction],
  "findByIdAndDelete": [MockFunction],
  "findOne": [MockFunction],
  "findOneAndDelete": [MockFunction],
  "findOneAndUpdate": [MockFunction],
  "group": [MockFunction],
  "id": "mock-id",
  "lookup": [MockFunction],
  "markModified": [MockFunction],
  "match": [MockFunction],
  "mime": "text/plain",
  "modelId": "testModelId",
  "name": "testFile",
  "path": "beta/model/testModelId/files/mock-long-id",
  "save": [MockFunction] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "scanResults": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "artefactKind": "file",
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "size": 100,
  "sort": [MockFunction],
  "tags": [],
  "toObject": [MockFunction],
  "update": [MockFunction],
  "updateMany": [MockFunction],
  "updateOne": [MockFunction],
}
`;

exports[`services > file > uploadFile > virus scan initialised 1`] = `
{
  "_id": {
    "toString": [Function],
  },
  "aggregate": [MockFunction],
  "append": [MockFunction],
  "complete": true,
  "delete": [MockFunction],
  "deleteMany": [MockFunction],
  "deleteOne": [MockFunction],
  "find": [MockFunction],
  "findById": [MockFunction],
  "findByIdAndDelete": [MockFunction],
  "findOne": [MockFunction],
  "findOneAndDelete": [MockFunction],
  "findOneAndUpdate": [MockFunction],
  "group": [MockFunction],
  "id": "mock-id",
  "lookup": [MockFunction],
  "markModified": [MockFunction],
  "match": [MockFunction],
  "mime": "text/plain",
  "modelId": "testModelId",
  "name": "testFile",
  "path": "beta/model/testModelId/files/mock-long-id",
  "save": [MockFunction] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "scanResults": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "artefactKind": "file",
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "size": 100,
  "sort": [MockFunction],
  "tags": [],
  "toObject": [MockFunction],
  "update": [MockFunction],
  "updateMany": [MockFunction],
  "updateOne": [MockFunction],
}
`;

exports[`services > file > uploadFile > virus scan initialised 2`] = `[]`;
